@@ -9,7 +9,7 @@ test "$exec_prefix" = NONE && exec_prefix=$prefix
 
 PACKAGE=mbuffer
 
-VERSION=20010626
+VERSION=20010628
 AC_DEFINE_UNQUOTED(VERSION,"${VERSION}")
 AC_SUBST(VERSION)
 
@@ -71,8 +71,12 @@ AC_SUBST(MULTIVOLUME)
 
 AC_ARG_ENABLE(experimental,
         --enable-experimental     enable experimental code,
-        AC_DEFINE_UNQUOTED(EXPERIMENTAL),
-        )
+        AC_DEFINE_UNQUOTED(EXPERIMENTAL)
+	AC_SEARCH_LIBS(socket,socket,,
+		AC_MSG_ERROR(could not find the library containing network functions!))
+	AC_SEARCH_LIBS(inet_pton,nsl,,
+		AC_MSG_ERROR(could not find the library containing name convertion functions!))
+	,)
 AC_SUBST(EXPERIMENTAL)
 
 
