@@ -41,6 +41,9 @@ use a memory mapped temporaray file as buffer (use with huge buffers)
 .TP 
 \fB\-T\fR <\fIfile\fP>
 as \-t but use \fIfile\fP instead
+.TP
+\fB\-d\fR
+use blocksize of device for output (needed for some devices)
 .TP 
 \fB\-p\fR <\fInum\fP>
 start writing after the buffer has been filled to \fInum\fP% (default 0 \- start at once)
